<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MarketFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:divider="@null"
            android:scrollbars="none"
            android:visibility="gone">


        </ListView>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/market_fragment_curr_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:src="@drawable/peny"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/market_fragment_curr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="296dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.516" />

            <TextView
                android:id="@+id/market_fragment_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="184dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/market_fragment_curr"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.516" />
        </android.support.constraint.ConstraintLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/line_chart"
            android:layout_width="462dp"
            android:layout_height="322dp"
            android:background="#ffffff"
            android:padding="25dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="427dp"
            android:layout_height="96dp">

            <TextView
                android:id="@+id/market_coinvalue"
                android:layout_width="118dp"
                android:layout_height="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize= "end"
                android:maxEms="10"
                android:singleLine="true"
                android:text="Coin Value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/market_coldvalue"
                android:layout_width="112dp"
                android:layout_height="32dp"
                android:layout_marginEnd="44dp"
                android:text="Gold Value"
                android:ellipsize= "end"
                android:maxEms="10"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Coin Value"
                app:layout_constraintStart_toStartOf="@+id/market_coinvalue"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Gold Value"
                app:layout_constraintStart_toStartOf="@+id/market_coldvalue"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/market_havepaied"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp"
                android:text="You can pay in n more collected coins today"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/market_coinvalue" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/market_selectcoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select A Coin"
                android:textColor="@color/color_b0b8b2" />

            <Button
                android:id="@+id/market_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainThemeColor"
                android:text="Make The Deal!"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
